[metadata]
name = pytest-async-mongodb
author = Ruben Quinones
author-email = ruben.quinones.gomez@gmail.com
summary = pytest plugin for async MongoDB
description-file = README.rst
license = MIT
home-page = https://github.com/xzased/pytest-async-mongodb
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Database
    Topic :: Software Development :: Libraries


[files]
packages = pytest_async_mongodb


[entry_points]
pytest11 =
    pytest-async-mongodb = pytest_async_mongodb.plugin


[wheel]
universal = 1
